--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-router-group": "^0.1.4",
     "http-errors": "~1.6.3",
